// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VDropDown component matches snapshot with custom data and placeholder 1`] = `
<View
  style={
    [
      {
        "width": "100%",
      },
      {
        "zIndex": 5000,
      },
      {
        "width": "40%",
      },
    ]
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onLayout={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#fff",
        "borderColor": "#BED2E9",
        "borderRadius": 15,
        "borderWidth": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "minHeight": 50,
        "opacity": 1,
        "paddingHorizontal": 30,
        "paddingVertical": 13.34,
        "width": "100%",
        "zIndex": 5000,
      }
    }
  >
    <Text
      style={
        [
          {
            "color": "#000",
            "flex": 1,
          },
          {},
          false,
          {
            "fontFamily": "Inter-SemiBold",
            "fontSize": 16,
          },
        ]
      }
    >
      Select an option
    </Text>
    <View
      style={
        [
          {
            "marginLeft": 10,
          },
          {},
        ]
      }
    >
      <SvgMock
        fill="#0071F3"
        style={
          [
            {
              "height": 20,
              "width": 20,
            },
            {},
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`VDropDown component matches snapshot with default props 1`] = `
<View
  style={
    [
      {
        "width": "100%",
      },
      {
        "zIndex": 5000,
      },
      {
        "width": "40%",
      },
    ]
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onLayout={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#fff",
        "borderColor": "#BED2E9",
        "borderRadius": 15,
        "borderWidth": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "minHeight": 50,
        "opacity": 1,
        "paddingHorizontal": 30,
        "paddingVertical": 13.34,
        "width": "100%",
        "zIndex": 5000,
      }
    }
  >
    <Text
      style={
        [
          {
            "color": "#000",
            "flex": 1,
          },
          {},
          false,
          {
            "fontFamily": "Inter-SemiBold",
            "fontSize": 16,
          },
        ]
      }
    >
      Select an item
    </Text>
    <View
      style={
        [
          {
            "marginLeft": 10,
          },
          {},
        ]
      }
    >
      <SvgMock
        fill="#0071F3"
        style={
          [
            {
              "height": 20,
              "width": 20,
            },
            {},
          ]
        }
      />
    </View>
  </View>
</View>
`;
